# Trill_SC

./: .gitignore  BELAUGens.sc  BUILD.md  README.md  update.sh
BelaProjects/CPP_BanjoDashboard/: CPP_BanjoDashboard  render.cpp  settings.json  sketch.js
BelaProjects/CPP_BanjoScopeInputs/: BanjoScopeInputs  CPP_BanjoScopeInputs  render.cpp  settings.json
BelaProjects/CPP_Test_GUI_Buffer_Limit/: CPP_Test_GUI_Buffer_Limit  render.cpp  sketch.js
BelaProjects/CPP_TrillCentroids_Test/: CPP_TrillCentroids_Test  render.cpp
BelaProjects/CPP_TrillRaw_Test/: CPP_TrillRaw_Test  render.cpp
BelaProjects/SC_Banjer_Openback/_macros/: local_macros.yaml
BelaProjects/SC_Banjer_Openback/_samples/york/: yorke-youll-e5.par.txt
BelaProjects/SC_BanjoExample/: _main.scd
BelaProjects/SC_Banjo_IO_Example/: _main.scd
BelaProjects/SC_CustomUgens/: _main.scd
BelaProjects/SC_Remote/: Banjo_Remote_Test.scd  Banjo_Scenes.scd  _main.scd  settings.json
BelaProjects/SC_Remote_Trill/: Trill_Remote_Test.scd  _main.scd
BelaProjects/SC_TrillCentroids_Example/: _main.scd
BelaProjects/SC_TrillRaw_Example/: _main.scd
BelaProjects/exampleTempProject/: exampleTempProject
Bela_UGens/: CMakeLists-common.txt
Bela_UGens/SimplePoll/: CMakeLists.txt  SimplePoll.cpp
Bela_UGens/TrillCentroids/: CMakeLists.txt  TrillCentroids.cpp
Bela_UGens/TrillLib_cpp/Trill.hack/: .Trill.cpp.swp  .Trill.h.swp  Trill.cpp  Trill.h
Bela_UGens/TrillLib_cpp/Trill_200305/: Trill.cpp
Bela_UGens/TrillLib_cpp/Trill_Adan/: Trill.cpp  Trill.h
Bela_UGens/TrillRaw/: CMakeLists.txt  TrillRaw.cpp
ext/SimplePoll/: SimplePoll.sc
ext/Trill/: Remote_Test.scd  TrillUGens.sc
